Fixed logo display issue on iOS and IE

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -77,15 +77,19 @@ span {
 /* =============== head =============== */
 
 @-webkit-keyframes offset { /* === svg logo animation === */
+	0% {stroke-dashoffset: 816;}
 	100% {stroke-dashoffset: 0;}
 }
 @keyframes offset {
+	0% {stroke-dashoffset: 816;}
 	100% {stroke-dashoffset: 0;}
 }
 @-webkit-keyframes fill-it {
+	0% {fill: transparent}
 	100% {fill: #4f89c8;}
 }
 @keyframes fill-it {
+	0% {fill: transparent;}
 	100% {fill: #4f89c8;}
 }
 
@@ -95,6 +99,7 @@ path {
 	stroke-dasharray: 816;
 	stroke-dashoffset: 816;
 	-webkit-animation: offset 2s linear forwards, fill-it 1s 2s forwards;
+	-ms-animation: offset .2s linear forwards, fill-it .1s .2s forwards;  // ie test
 	animation: offset 2s linear forwards, fill-it 1s 2s forwards;
 }
 .logo-text {
@@ -115,7 +120,8 @@ path {
 	transform: scale(.5);
 	transform-origin: 0 0;
 }
-#site_logo.logo-display {
+#site_logo.logo-display,
+#alt_log.logo-display {
 	display: block;
 }
 .logo-hide {
@@ -124,6 +130,7 @@ path {
 .mini-alt-logo {
 	margin: .15em auto 0 .4em;
 	height: 47px;
+	width: 52px;
 	transform: scale(1);
 	transform-origin: 0 0;
 }
@@ -575,6 +582,7 @@ path {
 	justify-content: center;
 	-webkit-perspective: 800px; // styles for animation starts here
 	-moz-perspective: 800px;
+	-ms-perspective: 800px; // ie may not need
 }
 
 .two-cards {
@@ -597,6 +605,8 @@ path {
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
 	-ms-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	//-ms-transform-style: flat;
 
 	h4, p {
 		text-align: center;
@@ -614,6 +624,8 @@ path {
 .side-b {
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
+	-ms-backface-visibility: hidden;
+	backface-visibility: hidden;
 }
 
 .card.flip1,
@@ -624,8 +636,8 @@ path {
 	-ms-transform: rotateY(-180deg);
 	transform: rotateY(-180deg);
 }
-/* === animation ends === */
 
+/* === animation ends === */
 .side-a {
 	position: absolute;
 	z-index: -20;
@@ -648,6 +660,9 @@ path {
 	-webkit-transform: rotateY(-180deg);
 	-ms-transform: rotateY(-180deg); 
 	transform: rotateY(-180deg);
+
+	transform: perspective(800px) rotateY(-180deg); // for ie
+	-ms-transform: perspective(800px) rotateY(-180deg); // for ie
 
 	h4, p {
 		line-height: 1.3;
@@ -1020,6 +1035,7 @@ path {
 		
 	img {
 		width: 48px;
+		height: 48px;
 	}
 }
 .arrow {
@@ -1031,6 +1047,7 @@ path {
 
 	img {
 		width: 48px;
+		height: 48px;
 	}
 }
 #prev {
@@ -1157,6 +1174,7 @@ path {
 
 			#modal_close {
 				width: 30px;
+				height: 30px;
 				cursor: pointer;
 				margin-left: auto;
 				display: block;
